tests/machine/x/rb/go_auto.rb
puts(testpkg.Add.call(2, 3))
puts(testpkg.Pi)
puts(testpkg.Answer)
